package modele.bien;

public enum Orientation {
	NORD,
	SUD,
	EST,
	OUEST;
}
